--- a/stable/htcondor/templates/cvmfs-pod.yaml
+++ b/stable/htcondor/templates/cvmfs-pod.yaml
@@ -4,8 +4,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: default-local
-data:
-  default.local: {{ .Values.cvmfs.defaultLocalConfig }}
+data: {{ .Values.cvmfs.defaultLocalConfig }}
   # other file: put here
 ---
 
@@ -65,8 +64,8 @@ spec:
         - mountPath: "/cvmfs"
           name: cvmfs
           mountPropagation: Bidirectional
-        - mountPath: "/etc/cvmfs/"
-          name: default-local
+        - mountPath: "/etc/cvmfs/config.d"
+          name: config.d
         {{- if .Values.cvmfs.privKey }}
         - mountPath: "/etc/cvmfs/keys"
           name: privkeys
@@ -76,15 +75,15 @@ spec:
       - name: cvmfs
         hostPath:
           path: "/cvmfs"
-          type: Directory
-      - name: default-local
+          type: DirectoryOrCreate
+      - name: config.d
         configMap: 
           name: default-local
       {{- if .Values.cvmfs.privKey }}
       - name: privkeys
         secret:
           secretName: secrets
-          defaultMode: 256
+          defaultMode: 511
       {{- end}}
         # TODO CONFIGMAP
   selector:
