--- a/stable/htcondor/templates/cvmfs-pod.yaml
+++ b/stable/htcondor/templates/cvmfs-pod.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.cvmfs.enabled -}}
+{{- if .Values.cvmfs.enabled }}
 # TODO configmap
 # DO it without passing string, but with parsing dict!
 apiVersion: v1
