--- a/stable/htcondor/templates/cvmfs-pod.yaml
+++ b/stable/htcondor/templates/cvmfs-pod.yaml
@@ -39,7 +39,7 @@ spec:
           requiredDuringSchedulingIgnoredDuringExecution:
           - labelSelector:
               matchExpressions:
-              - key: app
+              - key: app.kubernetes.io/name
                 operator: In
                 values:
                 - cvmfs
