--- a/stable/cachingondemand/Chart.yaml
+++ b/stable/cachingondemand/Chart.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 appVersion: "4.11"
 description: A Helm chart for the deployment of a XCache cluster
 name: cachingondemand
-version: 1.0.3
-icon: https://xrootd.slac.stanford.edu/images/xrootd-logo.png 
+version: 1.0.4
+icon: https://xrootd.slac.stanford.edu/images/xrootd-logo.png
 maintainers:
-  - name: Diego Ciangottini
+  - name: dciangot
     email: diego.ciangottini@pg.infn.it
-  - name: Daniele Spiga
+  - name: spigad
     email: daniele.spiga@pg.infn.it
 home: https://dodas-ts.github.io/helm_charts/stable/cachingondemand/
