--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ install:
     - export PATH=$PATH:/tmp
     - wget https://github.com/helm/chart-testing/releases/download/v2.4.0/chart-testing_2.4.0_linux_amd64.tar.gz 
     - tar xzvf chart-testing_2.4.0_linux_amd64.tar.gz
-    - pip install --user yamale
+    - sudo pip install yamale
     - sudo mv ct /bin/
     - sudo mkdir /etc/ct
     - sudo mv etc/* /etc/ct/
