--- a/.travis.yml
+++ b/.travis.yml
@@ -23,11 +23,11 @@ install:
     - /tmp/get-helm-3
     - export PATH=$PATH:/tmp
     - wget https://github.com/helm/chart-testing/releases/download/v2.4.0/chart-testing_2.4.0_linux_amd64.tar.gz 
-    - tar xzvf chart-testing_2.4.0_linux_amd64.tar.gz
+    - tar xzvf chart-testing_2.4.0_linux_amd64.tar.gz -C /tmp/ct
     - sudo pip install yamale
-    - sudo mv ct /bin/
+    - sudo mv /tmp/ct /bin/
     - sudo mkdir /etc/ct
-    - sudo mv etc/* /etc/ct/
+    - sudo mv /tmp/etc/* /etc/ct/
 
 script:
     - ./scripts/helm_lint.sh
