--- a/stable/htcondor/values.yaml
+++ b/stable/htcondor/values.yaml
@@ -196,6 +196,17 @@ ttsCache:
   proxyIAMEndpoint: "https://dodas-iam.cloud.cnaf.infn.it/"
   proxyCredentialEndpoint: "https://dodas-tts.cloud.cnaf.infn.it/api/v2/iam/credential"
 
+# Enable Squid server
+squid:
+  enabled: false
+  image:
+  tag:
+  pullPolicy:
+  replicas: 1
+
+  # Service Port
+  port: 3128
+
 # NFS volume mount on WN configuration
 nfs:
   enabled: false
