--- a/stable/htcondor/values.yaml
+++ b/stable/htcondor/values.yaml
@@ -127,31 +127,31 @@ htcWn:
           <site-local-config>
           <site name={{cms_config_cms_local_site}}>
           <event-data>
-          <catalog url="trivialcatalog_file:/cvmfs/cms.cern.ch/SITECONF/local/PhEDEx/storage.xml?protocol={{cms_input_protocol}}"/>
+          <catalog url=\"trivialcatalog_file:/cvmfs/cms.cern.ch/SITECONF/local/PhEDEx/storage.xml?protocol={{cms_input_protocol}}\"/>
           </event-data>
           <calib-data>
           <frontier-connect>
-          <load balance="proxies"/>
-          <proxy url="http://{{cms_config_mysquid_host}}:{{cms_config_mysquid_port}}"/>
-          <backupproxy url="http://cmsbpfrontier.cern.ch:3128"/>
-          <backupproxy url="http://cmsbproxy.fnal.gov:3128"/>
-          <server url="http://cmsfrontier.cern.ch:8000/FrontierInt"/>
-          <server url="http://cmsfrontier1.cern.ch:8000/FrontierInt"/>
-          <server url="http://cmsfrontier2.cern.ch:8000/FrontierInt"/>
-          <server url="http://cmsfrontier3.cern.ch:8000/FrontierInt"/>
+          <load balance=\"proxies\"/>
+          <proxy url=\"http://{{cms_config_mysquid_host}}:{{cms_config_mysquid_port}}\"/>
+          <backupproxy url=\"http://cmsbpfrontier.cern.ch:3128\"/>
+          <backupproxy url=\"http://cmsbproxy.fnal.gov:3128\"/>
+          <server url=\"http://cmsfrontier.cern.ch:8000/FrontierInt\"/>
+          <server url=\"http://cmsfrontier1.cern.ch:8000/FrontierInt\"/>
+          <server url=\"http://cmsfrontier2.cern.ch:8000/FrontierInt\"/>
+          <server url=\"http://cmsfrontier3.cern.ch:8000/FrontierInt\"/>
           </frontier-connect>
           </calib-data>
           <local-stage-out>
-            <command value="{{cms_config_stageoutcommand}}"/>
-            <catalog url="trivialcatalog_file:/cvmfs/cms.cern.ch/SITECONF/{{cms_config_stageoutsite}}/PhEDEx/storage.xml?protocol={{cms_config_stageoutprotocol}}"/>
-            <se-name value="srm-eoscms.cern.ch"/>
-            <phedex-node value="{{cms_config_phedexnode}}"/>
+            <command value=\"{{cms_config_stageoutcommand}}\"/>
+            <catalog url=\"trivialcatalog_file:/cvmfs/cms.cern.ch/SITECONF/{{cms_config_stageoutsite}}/PhEDEx/storage.xml?protocol={{cms_config_stageoutprotocol}}\"/>
+            <se-name value=\"srm-eoscms.cern.ch\"/>
+            <phedex-node value=\"{{cms_config_phedexnode}}\"/>
           </local-stage-out>
           <fallback-stage-out>
-            <se-name value="t2-srm-02.lnl.infn.it"/>
-            <phedex-node value="{{cms_config_fallback_phedexnode}}"/>
-            <lfn-prefix value="{{cms_config_fallback_lfn_prefix}}"/>
-            <command value="{{cms_config_fallback_command}}"/>
+            <se-name value=\"t2-srm-02.lnl.infn.it\"/>
+            <phedex-node value=\"{{cms_config_fallback_phedexnode}}\"/>
+            <lfn-prefix value=\"{{cms_config_fallback_lfn_prefix}}\"/>
+            <command value=\"{{cms_config_fallback_command}}\"/>
           </fallback-stage-out>
           </site>
           </site-local-config>
@@ -160,15 +160,15 @@ htcWn:
         content: |
           <storage-mapping>
           <!-- AAA xrootd read rule -->
-          <lfn-to-pfn protocol="xrootd"
-                  destination-match=".*"
-                  path-match="/+store/(.*)"
-                  result="root://{{cms_xrd_readserver}}//store/$1"/>
+          <lfn-to-pfn protocol=\"xrootd\"
+                  destination-match=\".*\"
+                  path-match=\"/+store/(.*)\"
+                  result=\"root://{{cms_xrd_readserver}}//store/$1\"/>
           <!-- Onedata read rule -->
-          <lfn-to-pfn protocol="onedata"
-                  destination-match=".*"
-                  path-match="/(.*)"
-                  result="/mnt/onedata/{{cms_input_path}}/$1"/>
+          <lfn-to-pfn protocol=\"onedata\"
+                  destination-match=\".*\"
+                  path-match=\"/(.*)\"
+                  result=\"/mnt/onedata/{{cms_input_path}}/$1\"/>
           </storage-mapping>
 
 
