--- a/stable/htcondor/values.yaml
+++ b/stable/htcondor/values.yaml
@@ -241,8 +241,10 @@ cvmfs:
       test
 
   # default.local file content
-  defaultLocalConfig: |
-    spiga.local.repo.conf: |-
-      property.1=value-1
-      property.2=value-2
-      property.3=value-3
+  defaultLocalConfig:
+    - file: spiga.local.repo.conf
+      content: |
+        spiga.local.repo.conf: |-
+          property.1=value-1
+          property.2=value-2
+          property.3=value-3
