--- a/stable/spark/values.yaml
+++ b/stable/spark/values.yaml
@@ -24,12 +24,8 @@ externalIp:
 master:
     name: master
     namespace: default
-    image: ttedesch/spark-py
-    imageTag: base_k8s_2.4.4_client_4.4.2
-    #image: ttedesch/spark-py 
-    #imageTag: base_k8s_2.4.4 
-    #image: cloudpg/spark-py
-    #imageTag: dodas-2.4.3-bigdl
+    image: dodasts/spark-k8s-py
+    imageTag: v2.0.0-rc1
     replicas: 1
     component: spark-master
     cpu: 100m
@@ -43,14 +39,8 @@ master:
         nodePort: 30888
         token: testme
         port: 8888
-        image: ttedesch/pyspark-notebook
-        tag: customized_3.6
-        #image: ttedesch/all-spark-notebook  
-        #tag: customized_v5_3.6 
-        #image: ttedesch/pyspark_jupyter
-        #tag: latest
-        #image: cloudpg/spark-notebook
-        #tag: k8s-py3.6
+        image: dodasts/pyspark-notebook
+        tag: v2.0.0-rc1
 
 
 # WebUi service configuration values
