basic healthchecks tts and wn

--- a/stable/htcondor/templates/htc-wn-pod.yaml
+++ b/stable/htcondor/templates/htc-wn-pod.yaml
@@ -50,12 +50,12 @@ spec:
         livenessProbe:
           exec:
             command:
-            - cat
-            - /cvmfs/spiga.local.repo/test-content
-            #- voms-proxy-info
-            #- --file
-            #- /root/gwms_proxy
-            #- --exists
+            #- cat
+            #- /cvmfs/spiga.local.repo/test-content
+            - voms-proxy-info
+            - --file
+            - /root/gwms_proxy
+            - -e
           initialDelaySeconds: 300
           periodSeconds: 600
         resources:
