--- a/stable/htcondor/templates/htc-wn-pod.yaml
+++ b/stable/htcondor/templates/htc-wn-pod.yaml
@@ -32,6 +32,19 @@ spec:
             topologyKey: kubernetes.io/hostname
         {{- end }}
       containers:
+      {{- if .Values.ttsCache.enabled }}
+      - name: tts
+        imagePullPolicy: Always
+        image: dodasts/tts-cache:v0.1.1-k8s
+        args:
+          - --get-proxy
+          - --period
+          - "120"
+        resources:
+          limits:
+            memory: "500M"
+            cpu: "100m"
+      {{- end }}
       - name: wn
         imagePullPolicy: {{ .Values.htcWn.pullPolicy }}
         args:
