fix health checks

--- a/stable/htcondor/templates/htc-schedd-pod.yaml
+++ b/stable/htcondor/templates/htc-schedd-pod.yaml
@@ -81,7 +81,7 @@ spec:
             command:
             - voms-proxy-info
             - --file
-            - /root/gwms_proxy
+            - /root/proxy/gwms_proxy
             - --exists
           initialDelaySeconds: 300
           periodSeconds: 600
