--- a/stable/htcondor/templates/htc-master-pod.yaml
+++ b/stable/htcondor/templates/htc-master-pod.yaml
@@ -73,7 +73,7 @@ spec:
             command:
             - voms-proxy-info
             - --file
-            - /root/gwms_proxy
+            - /root/proxy/gwms_proxy
             - --exists
           initialDelaySeconds: 300
           periodSeconds: 600
