--- a/stable/htcondor/templates/htc-schedd-pod.yaml
+++ b/stable/htcondor/templates/htc-schedd-pod.yaml
@@ -31,8 +31,8 @@ spec:
       containers:
       {{- if .Values.ttsCache.enabled }}
       - name: tts
-        imagePullPolicy: Always
-        image: dodasts/tts-cache:v0.1.1-k8s
+        imagePullPolicy: "{{ .Values.ttsCache.pullPolicy }}"
+        image: "{{ .Values.ttsCache.image }}:{{ .Values.ttsCache.tag }}"
         args:
           - --get-proxy
           - --period
@@ -103,7 +103,7 @@ spec:
         emptyDir: {}
       - name: config
         configMap:
-          name: ttsconfi
+          name: ttsconfig
 {{- end }}
       - name: myspool
         persistentVolumeClaim:
