fix tts sidecars

--- a/stable/htcondor/templates/htc-master-pod.yaml
+++ b/stable/htcondor/templates/htc-master-pod.yaml
@@ -37,6 +37,8 @@ spec:
           - --get-proxy
           - --period
           - "120"
+          - "--config"
+          - "/app/.config.yaml"
         resources:
           limits:
             memory: "500M"
