fix schedd uwdir mount path

--- a/stable/htcondor/templates/htc-schedd-pod.yaml
+++ b/stable/htcondor/templates/htc-schedd-pod.yaml
@@ -46,6 +46,8 @@ spec:
         volumeMounts:
           - name: proxydir
             mountPath: /root/proxy
+          - mountPath: "/home/uwdir"
+            name: uwdir
       {{- end }}
       - name: schedd
         resources:
