fix uwdir location

--- a/stable/htcondor/templates/htc-schedd-pod.yaml
+++ b/stable/htcondor/templates/htc-schedd-pod.yaml
@@ -118,7 +118,7 @@ spec:
           claimName: schedd-claim
       - name: uwdir
         hostPath:
-          path: /home/ubuntu/uwdir
+          path: /etc/uwdir
   selector:
     matchLabels:
       app.kubernetes.io/name: schedd
