--- a/stable/htcondor/templates/htc-master-pod.yaml
+++ b/stable/htcondor/templates/htc-master-pod.yaml
@@ -11,6 +11,7 @@ spec:
       labels:
         app.kubernetes.io/name: htc-master
     spec:
+      priorityClassName: system-node-critical
       affinity:
 {{- if .Values.htcMaster.nodeSelector }}
 {{ .Values.htcMaster.nodeSelector | indent 8 }}
