--- a/stable/htcondor/templates/htc-wn-pod.yaml
+++ b/stable/htcondor/templates/htc-wn-pod.yaml
@@ -56,7 +56,7 @@ spec:
       - name: wn
         imagePullPolicy: {{ .Values.htcWn.pullPolicy }}
         args:
-        - wn 
+        - "{{ .Values.htcWn.args }}"
         env:
         - name: CONDOR_HOST 
           value: "{{ .Values.condorHost }}"
@@ -66,6 +66,8 @@ spec:
           value:  "{{ .Values.ccbHost }}"
         - name: SLOT_TYPE_1
           value: "{{ .Values.htcWn.slotType }}"
+        - name: NUM_CPUS
+          value: "{{ .Values.htcWn.siteConfCMS.numCPUS }}"
 
         image: "{{ .Values.htcWn.image }}:{{ .Values.htcWn.tag }}"
         livenessProbe:
