--- a/stable/htcondor/templates/htc-wn-pod.yaml
+++ b/stable/htcondor/templates/htc-wn-pod.yaml
@@ -79,6 +79,8 @@ spec:
             - --file
             - /root/proxy/gwms_proxy
             - -e
+            - --valid
+            - "6:00"
           initialDelaySeconds: 300
           periodSeconds: 600
         resources:
